everydocs/20-deployment-mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: everydocs-db
  namespace: everydocs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: everydocs-db
  template:
    metadata:
      labels:
        app: everydocs-db
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.7.3
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
      volumes:
      - name: data
        emptyDir: {}
