everydocs/20-deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: everydocs-db
  namespace: everydocs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: everydocs-db
  template:
    metadata:
      labels:
        app: everydocs-db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        args:
          - "--default-authentication-plugin=mysql_native_password"
          - "--character-set-server=utf8mb4"
          - "--collation-server=utf8mb4_unicode_ci"
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: everydocs-mysql-pvc
