everydocs/30-deployment-everydocs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: everydocs-core
  namespace: everydocs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: everydocs-core
  template:
    metadata:
      labels:
        app: everydocs-core
    spec:
      containers:
      - name: everydocs-core
        image: jonashellmann/everydocs:latest
        ports:
        - containerPort: 5678
        volumeMounts:
        - name: files
          mountPath: /var/everydocs-files
      volumes:
      - name: files
        persistentVolumeClaim:
          claimName: pvc-everydocs-files
