everydocs/45-everydocs-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: everydocs-web
  namespace: everydocs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: everydocs-web
  template:
    metadata:
      labels:
        app: everydocs-web
    spec:
      containers:
      - name: everydocs-web
        image: jonashellmann/everydocs-web:latest
        volumeMounts:
        - name: config
          mountPath: /usr/local/apache2/htdocs/config.js
          subPath: config.js
        ports:
        - containerPort: 80
        - containerPort: 443
      volumes:
      - name: config
        configMap:
          name: everydocs-web-config
---
