everydocs/25-service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: everydocs-db
  namespace: everydocs
spec:
  selector:
    app: everydocs-db
  ports:
  - port: 3306
    targetPort: 3306
