everydocs/35-service-everydocs.yaml
apiVersion: v1
kind: Service
metadata:
  name: everydocs-core
  namespace: everydocs
spec:
  selector:
    app: everydocs-core
  ports:
  - port: 5678
    targetPort: 5678
