everydocs/46-everydocs-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: everydocs-web
  namespace: everydocs
spec:
  selector:
    app: everydocs-web
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
